chore: fix bump-and-release call

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "src/*.js"
   ],
   "scripts": {
-    "bump": "bump-and-release.js -t bump",
+    "bump": "bump-and-release -t bump",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "lint:fix": "eslint --fix --color \"./src/**/*.js\" \"./bin/**/*.js\"",
     "lint": "eslint --color \"./src/**/*.js\" \"./bin/**/*.js\"",
     "prettier:fix": "prettier --loglevel error --write \"{src/**/*.js,bin/**/*.js}\"",
     "prettier:all": "npm-run-all --serial prettier:fix lint:fix",
-    "release": "bump-and-release.js -t release",
+    "release": "bump-and-release -t release",
     "test": "cross-env NODE_ENV=\"test\" jest",
     "test:coverage": "npm run test -- --coverage",
     "test:watch": "npm run test -- --watch"
