chore: updating bump-and-release to latest

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@commitlint/cli": "^11.0.0",
     "@testing-library/jest-dom": "5.11.9",
     "babel-eslint": "^10.1.0",
-    "bump-and-release": "1.0.0",
+    "bump-and-release": "^1.2.0",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^7.2.0",
