--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "bump": "bump-and-release -t bump",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
+    "latest": "rimraf LATEST.md && conventional-changelog -o LATEST.md -n \"./configuration/latest/config.js\"",
     "lint:fix": "eslint --fix --color \"./src/**/*.js\"",
     "lint": "eslint --color \"./src/**/*.js\"",
     "prettier:fix": "prettier --loglevel error --write \"{src/**/*.js}\"",
@@ -31,6 +32,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "babel-eslint": "^10.1.0",
     "bump-and-release": "^1.2.0",
+    "compare-func": "2.0.0",
     "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^7.2.0",
@@ -39,7 +41,9 @@
     "jest": "26.6.3",
     "lint-staged": "^10.5.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "q": "1.5.1",
+    "rimraf": "3.0.2"
   },
   "dependencies": {
     "kleur": "4.1.4"
