chore: adding missing "npm ci" from release GH Action

--- a/.github/workflows/release-and-publish.yml
+++ b/.github/workflows/release-and-publish.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Checkout code
+        run: npm ci
       - name: Test code
         run: npm test
       - name: Create Release
