refactor: baseline on all my other libraries (via generator-teeny-nm)

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,17 @@
 {
-  "configuration/**/*.js": ["prettier --write", "eslint --fix", "git add"],
-  "src/**/*.js": ["prettier --write", "eslint --fix", "git add"]
+  "bin/**/*.js": [
+    "prettier --write",
+    "eslint --fix",
+    "git add"
+  ],
+  "configuration/**/*.js": [
+    "prettier --write",
+    "eslint --fix",
+    "git add"
+  ],
+  "src/**/*.js": [
+    "prettier --write",
+    "eslint --fix",
+    "git add"
+  ]
 }
