--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teeny-logger",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "license": "MIT",
   "author": "Arno Versini",
   "description": "A tiny console logger for nodejs CLI apps",
